feat: govern Ghana NPL reduction plans
